@@ -294,7 +294,7 @@ public class ConfigDispatcher {
 
         // configuration file contains a PID Marker
         List<String> lines = Files.readAllLines(configFile.toPath(), StandardCharsets.UTF_8);
-        String exclusivePID = !lines.isEmpty() ? getPIDFromLine(lines.get(0)) : null;
+        String exclusivePID = !lines.isEmpty() ? getPIDFromLine(lines.getFirst()) : null;
         if (exclusivePID != null) {
             if (exclusivePIDMap.contains(exclusivePID)) {
                 logger.warn(
