@@ -299,7 +299,7 @@ public class SitemapSubscriptionService implements ModelRepositoryChangeListener
                 // subscribing to whole sitemap --> get items for all subpages as well
                 LinkedList<Widget> childrenQueue = new LinkedList<>(widgets);
                 while (!childrenQueue.isEmpty()) {
-                    Widget child = childrenQueue.remove(0);
+                    Widget child = childrenQueue.removeFirst();
                     if (child instanceof LinkableWidget) {
                         List<Widget> subWidgets = itemUIRegistry.getChildren((LinkableWidget) child);
                         widgets.addAll(subWidgets);
