@@ -52,9 +52,9 @@ public class LocaleServiceImpl implements LocaleService {
                 split = acceptLanguageHttpHeader.split("-");
             }
             if (split.length == 2) {
-                locale = new Locale(split[0], split[1]);
+                locale = Locale.of(split[0], split[1]);
             } else {
-                locale = new Locale(split[0]);
+                locale = Locale.of(split[0]);
             }
         }
         return locale;
