@@ -157,7 +157,7 @@ public class CorsFilter implements ContainerResponseFilter {
         if (values == null || values.isEmpty()) {
             return null;
         }
-        return values.get(0);
+        return values.getFirst();
     }
 
     /**
